2019/DevOps/manifests/movies-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-api
spec:
  type: ClusterIP
  ports:
  - name: "movies-api-service"
    port: 3000
  selector:
    app: movies-api
