2019/DevOps/manifests/movies-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: movies-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: pablo-okteto-com
spec:
  rules:
  - host: movies.pablo.apps.dev.k8spin.cloud
    http:
      paths:
      - path: /api
        backend: 
          serviceName: movies-api
          servicePort: 3000
      - path: /hmr
        backend:
          serviceName: movies-frontend
          servicePort: 9001
      - path: /
        backend:
          serviceName: movies-frontend
          servicePort: 9000
  tls:
  - hosts:
    - movies.pablo.apps.dev.k8spin.cloud
    secretName: movies-letsencrypt
